# ChessInC

./: CMakeLists.txt  README.md  compile_unix.sh  compile_windows.ps1
src/: chess.h  gamestate.c  gamestate.h  main.c  main.h  movements.c  movements.h  userinterface.c  userinterface.h
